[package]
name = "luxon"
license = "MIT"
description = "Dotfiles manager + full system config + easy provisioning"
homepage = "https://github.com/tyrumus/luxon"
documentation = "https://github.com/tyrumus/luxon"
repository = "https://github.com/tyrumus/luxon"
include = ["src/**/*", "LICENSE", "README.md"]
authors = ["Tyron Rieckmann <ty@tyrumus.dev>"]
keywords = ["dotfiles", "manager", "config", "system"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.23", features = ["derive", "env"] }
directories = "5.0.1"
gix = "0.52.0"
handlebars = "4.3.7"
miette = { version = "5.10.0", features = ["fancy"] }
